[Misc] Convert tests to JUnit5 + cleanup